--- a/src/App.css
+++ b/src/App.css
@@ -94,3 +94,105 @@
   height: 30vw;
   padding: 10px;
 }
+
+.scene {
+  width: 8vw;
+  height: 35vh;
+  perspective: 400px;
+  padding-bottom: 41vh;
+}
+
+#carousel {
+  transform: translateZ(-28vw);
+  transform-style: preserve-3d;
+  transition: transform 1.5s;
+}
+
+.carousel__cell {
+  position: absolute;
+  width: 8vw;
+  height: 35vh;
+  line-height: 300px;
+  font-size: 80px;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.carousel__cell:nth-child(9n + 1) {
+  background: hsla(45, 100%, 50%, 1);
+}
+.carousel__cell:nth-child(9n + 2) {
+  background: hsla(90, 100%, 50%, 1);
+}
+.carousel__cell:nth-child(9n + 3) {
+  background: hsla(135, 100%, 50%, 1);
+}
+.carousel__cell:nth-child(9n + 4) {
+  background: hsla(180, 100%, 50%, 1);
+}
+
+
+.carousel__cell:nth-child(1) {
+  transform: rotateY(45deg) translateZ(-35vw);
+}
+.carousel__cell:nth-child(2) {
+  transform: rotateY(90deg) translateZ(-35vw);
+}
+.carousel__cell:nth-child(3) {
+  transform: rotateY(135deg) translateZ(-35vw);
+}
+.carousel__cell:nth-child(4) {
+  transform: rotateY(180deg) translateZ(-35vw);
+}
+
+#previous-button {
+  background-color: black;
+  color: white;
+}
+
+#next-button {
+  width: 70vw;
+  border-radius: 50%;
+  background-color: black;
+  color: white;
+}
+
+.buttonContainer {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.imagesCarousel {
+  width: 100%;
+  height: 100%;
+  border: 1px solid white;
+  border-radius: 10px;
+}
+
+.glowing {
+  margin-top: 25vh;
+  margin-left: -20vw;
+  width: 70vw;
+  border-radius: 50%;
+  clip-path: ellipse(50px, 20px);
+  border: 0.5px solid white;
+  box-shadow: 0 0 20px 10px #48abe0, 0 0 30px 10px #ebecca, 0 0 55px 30px #8a2be2,
+    0 0 70px 35px #ff1493;
+    background-color: #1F1F1F;
+}
+
+.cardTextContainer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 2.5vw;
+  padding-right: 2.5vw;
+}
